--- a/README.html
+++ b/README.html
@@ -392,17 +392,20 @@ FILE (which can be /dev/null to discard it).</p>
 <h3 id="non-debian-based-linux-or-bsd">Non-Debian-based Linux or
 *BSD</h3>
 <ul>
-<li><p><strong>Red Hat, Fedora, CentOS (now continued as Rocky Linux or
-Alma Linux):</strong> (sudo yum install) openssl-devel libplist-devel
-avahi-compat-libdns_sd-devel (some from the “PowerTools” add-on
-repository) (+libX11-devel for fullscreen X11, and “ZOOMFIX” if needed).
-The required GStreamer packages are: gstreamer1-devel
+<li><p><strong>Red Hat, or clones like CentOS (now continued as Rocky
+Linux or Alma Linux):</strong> (sudo yum install) openssl-devel
+libplist-devel avahi-compat-libdns_sd-devel (some from the “PowerTools”
+add-on repository) (+libX11-devel for fullscreen X11, and “ZOOMFIX” if
+needed). The required GStreamer packages are: gstreamer1-devel
 gstreamer1-plugins-base-devel gstreamer1-libav
 gstreamer1-plugins-bad-free (+ gstreamer1-vaapi for intel graphics); you
 may need to get some of them (in particular gstreamer1-libav) from <a
 href="https://rpmfusion.org">rpmfusion.org</a> (which provides packages
-including plugins that RedHat does not ship for license
-reasons).</p></li>
+including plugins that RedHat does not ship for license reasons).
+<em>[In recent <strong>Fedora</strong>, the libav plugin package is
+renamed to “gstreamer1-plugin-libav”; this is supplied by RedHat, and
+instead the code it needs, but which RedHat does not provide, is in the
+package ffmpeg-libs from rpmfusion.org]</em>.</p></li>
 <li><p><strong>OpenSUSE:</strong> (sudo zypper install) libopenssl-devel
 libplist-devel avahi-compat-mDNSResponder-devel (+ libX11-devel for
 fullscreen X11, and ZOOMFIX if needed). The required GStreamer packages
